syntax = "proto3";

option csharp_namespace = "Saapp.AndroidAPI.Endpoints.GRPC.Sales.CenterRecieptionDuration.Protos";
option java_multiple_files = true;
option java_package = "com.saphamrah.protos";
option java_outer_classname = "CenterRecieptionDurationProto";
option objc_class_prefix = "HLW";


package Sales;

service CenterRecieptionDuration{
	rpc GetCenterRecieptionDuration(CenterRecieptionDurationRequest) returns(CenterRecieptionDurationReplyList);
}

message CenterRecieptionDurationRequest{
 int32 SellCenterID = 1;
}

message CenterRecieptionDurationReply{
         int32 RecieptionDurationCenterID = 1 ;
         int32 RecieptionDurationID = 2;
         int32 SellStructureSellOrganizationCenterID = 3;
        
}

message CenterRecieptionDurationReplyList{
	repeated CenterRecieptionDurationReply CenterRecieptionDurations = 1;
}
